syntax = "proto3";

package blog;

option go_package ="github.com/flavioesteves/grpc-microservices-go/blog/proto";

import "google/protobuf/empty.proto";

message Blog {
  string id = 1;
  string author_id =2;
  string title = 3;
  string content =4;
}

message BlogId {
  string id =1;
}

service BlogService {
  rpc CreateBlog (Blog) returns (BlogId);
  rpc ReadBlog (BlogId) returns (Blog);
  rpc Updateblog (Blog) returns (google.protobuf.Empty);
  rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
  rpc ListBlogs (google.protobuf.Empty) returns (stream Blog);
}
